--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
     "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
     "files.associations": {
         "random": "c",
-        "rp2040_quiesce_and_jump.h": "c"
+        "rp2040_quiesce_and_jump.h": "c",
+        "bin2page_decoder.h": "c"
     }
 }
