--- a/bin2page_encoder/.vscode/launch.json
+++ b/bin2page_encoder/.vscode/launch.json
@@ -11,38 +11,39 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable sfu_diff8bit_linker",
+            "name": "Debug executable bin2page_encoder",
             "cargo": {
                 "args": [
                     "build",
-                    "--bin=sfu_diff8bit_linker",
-                    "--package=sfu_diff8bit_linker",
+                    "--bin=bin2page_encoder",
+                    "--package=bin2page_encoder",
                     "--release"
                 ],
                 "filter": {
-                    "name": "sfu_diff8bit_linker",
+                    "name": "bin2page_encoder",
                     "kind": "bin"
                 }
             },
             "args": [
-                // "user_arg1",
-                // "user_arg2"
+                "C:\\Users\\sj21d\\Documents\\Pico-v1.5.1\\test\\payspot-tester\\build\\payspot_tester_a.bin",
+                "C:\\Users\\sj21d\\Documents\\Pico-v1.5.1\\test\\payspot-tester\\build\\payspot_tester_b.bin",
+                "C:\\Users\\sj21d\\Documents\\Pico-v1.5.1\\test\\payspot-tester\\build\\payspot_tester.page2bin",
             ],
             "cwd": "${workspaceFolder}"
         },
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable sfu_diff8bit_linker",
+            "name": "Debug unit tests in executable bin2page_encoder",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=sfu_diff8bit_linker",
-                    "--package=sfu_diff8bit_linker"
+                    "--bin=bin2page_encoder",
+                    "--package=bin2page_encoder"
                 ],
                 "filter": {
-                    "name": "sfu_diff8bit_linker",
+                    "name": "bin2page_encoder",
                     "kind": "bin"
                 }
             },
