--- a/bin2page_encoder/Cargo.toml
+++ b/bin2page_encoder/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "sfu_diff8bit_linker"
+name = "bin2page_encoder"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "*"
 # clap = { version = "4.5", features = ["derive"] }
